<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_now"
                android:icon="@null"
                android:title="@string/menu_now"/>
        <item
                android:id="@+id/nav_last_week"
                android:icon="@null"
                android:title="@string/menu_last_week"/>
        <item
                android:id="@+id/nav_collect_box"
                android:icon="@null"
                android:title="@string/menu_collect_box"/>
        <item
                android:id="@+id/nav_trash_can"
                android:icon="@null"
                android:title="@string/menu_trash_can"/>
    </group>
</menu>