<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_list"
            android:icon="@drawable/list"
            android:title="@string/title_list"/>

    <item
            android:id="@+id/navigation_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/title_calendar"/>

    <item
            android:id="@+id/navigation_quadrant"
            android:icon="@drawable/quadrant"
            android:title="@string/title_quadrant"/>

    <item
            android:id="@+id/navigation_tomato_clock"
            android:icon="@drawable/tomato"
            android:title="@string/title_tomato_clock"/>

<!--    <item-->
<!--            android:id="@+id/navigation_clock"-->
<!--            android:icon="@drawable/clock"-->
<!--            android:title="@string/title_clock"/>-->
</menu>